Bug Fix - Menu Page
In the menu page the scrolling food nav bar z-index was set to 1, this prevents the footer icons from overlapping over it.

--- a/style/style.css
+++ b/style/style.css
@@ -951,6 +951,7 @@ main #main_landingPage{
 
     #menu_sidebar_outer{
         position: fixed;
+		z-index: 1;
         width: auto;
         top: 81px;
         left:0%;        
